--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "aws-amplify": "^4.3.5",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
-    "flexboxgrid": "^6.3.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
