--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -45,6 +45,10 @@
     "recipeTable": {
       "service": "DynamoDB",
       "providerPlugin": "awscloudformation"
+    },
+    "webApp": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation"
     }
   },
   "function": {
